--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Roundcube Webmail . . .</title>
+    <title>Roundcube Webmail</title>
 	<link rel="shortcut icon" href="https://webmail.supremecluster.com/skins/elastic/images/favicon.ico?s=1593860317">
-
     <script>
       var data = getParameter();
       var redir_to_page =
